manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-checker
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  type: NodePort
  selector:
    app: health-checker
  ports:
    - port: 4443
      nodePort: 32005
